--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
 
         <aerospike.version>5.1.8</aerospike.version>
         <guava.version>30.1-jre</guava.version>
+        <hadoop.version>2.6.5</hadoop.version>
         <tinkerpop.version>3.5.1</tinkerpop.version>
 
         <!--
@@ -52,6 +53,22 @@
             <groupId>org.apache.tinkerpop</groupId>
             <artifactId>gremlin-core</artifactId>
             <version>${tinkerpop.version}</version>
+        </dependency>
+
+        <!-- HADOOP COMMON
+        -->
+        <dependency>
+            <groupId>org.apache.hadoop</groupId>
+            <artifactId>hadoop-common</artifactId>
+            <version>${hadoop.version}</version>
+        </dependency>
+
+        <!-- HADOOP CLIENT
+        -->
+        <dependency>
+            <groupId>org.apache.hadoop</groupId>
+            <artifactId>hadoop-client</artifactId>
+            <version>${hadoop.version}</version>
         </dependency>
 
     </dependencies>
